<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Firebase</string>
    <string name="userName">Enter your Email</string>
    <string name="password">Enter your password</string>
    <string name="welcome">WELCOME!</string>
    <string name="suggestSignUp">Dont have an account? SIGNUP</string>
    <string name="suggestLogin">Already have an account? LOGIN</string>
    <string name="logIn">LOG IN</string>
    <string name="signUp">SIGN UP</string>
</resources>